--- a/index.css
+++ b/index.css
@@ -22,8 +22,9 @@ h1{
     
 }
 
-.time{
+.time1{
     display: flex;
+    justify-self: center;
 }
 
 .inline{
@@ -34,6 +35,7 @@ h1{
 .time{
     margin-right: 10px;
     margin-left: 10px;
+    font-size: 40px;
     
 }
 
@@ -41,7 +43,12 @@ h1{
     margin-left: 10px;
 }
 
-.btn{
+.btn1{
     margin-left: 10px;
     margin-top: 20px;
+}
+
+.btn:hover{
+    color: white;
+    background-color: black;
 }
